--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="orange">#FF9800</color>
     <color name="blue">#66CCFB</color>
     <color name="cinza">#757575</color>
+    <color name="rosa">#AA0098</color>
 </resources>
