--- a/app/src/main/res/layout/fragment_ativas_fragments.xml
+++ b/app/src/main/res/layout/fragment_ativas_fragments.xml
@@ -24,10 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:backgroundTint="@color/orange"
+        android:onClick="telaAdicionar"
         android:padding="0dp"
         android:text="+"
-        android:textSize="35dp"
         android:textColor="@color/white"
+        android:textSize="35dp"
         android:visibility="visible" />
 
 
