manipulacao de datas

--- a/app/src/main/res/layout/fragment_ativas_fragments.xml
+++ b/app/src/main/res/layout/fragment_ativas_fragments.xml
@@ -19,7 +19,7 @@
 
     <Button
 
-        android:id="@+id/btnAdicionar"
+        android:id="@+id/btnProximo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
